Polish usage of Collection in @ConfigurationProperties classes
1. It's safe to use immutable Collection object as default value of field.
2. It's unnecessary to create new Collection object in setter method.

Signed-off-by: Yanming Zhou <zhouyanming@gmail.com>