@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,8 +17,6 @@
 package org.springframework.boot.autoconfigure.elasticsearch;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -35,7 +33,7 @@ public class ElasticsearchProperties {
 	/**
 	 * List of the Elasticsearch instances to use.
 	 */
-	private List<String> uris = new ArrayList<>(Collections.singletonList("http://localhost:9200"));
+	private List<String> uris = List.of("http://localhost:9200");
 
 	/**
 	 * Username for authentication with Elasticsearch.
