@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,8 +19,6 @@ package org.springframework.boot.autoconfigure.kafka;
 import java.io.IOException;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -69,7 +67,7 @@ public class KafkaProperties {
 	 * List of host:port pairs to use for establishing the initial connections to the
 	 * Kafka cluster. Applies to all components unless overridden.
 	 */
-	private List<String> bootstrapServers = new ArrayList<>(Collections.singletonList("localhost:9092"));
+	private List<String> bootstrapServers = List.of("localhost:9092");
 
 	/**
 	 * ID to pass to the server when making requests. Used for server-side logging.
